add delete user from specific experiment
