# api_docs/swagger.json
@@ -983,6 +983,38 @@
         }
       }
     },
+    "/experiments/{expid}/users/{userid}": {
+      "delete": {
+        "tags": [
+          "experiments"
+        ],
+        "summary": "Delete user from one experiment",
+        "parameters": [
+          {
+            "name": "expid",
+            "type": "integer",
+            "description": "id of the experiment",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "userid",
+            "type": "integer",
+            "description": "id of the user",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/experiments/{id}/data": {
       "get": {
         "tags": [
